# Taxonomy-Database

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.bak  NEWS  README  README.md  configure.ac  datatypes.web  taxonomy.tex  taxonomy.web
database/: taxonomy.sql
src/: .gitignore  Makefile.am  classes.web  cmdlnopt.web  parser.web  scanner.web  taxonomy.web  test_input.txt  ttemp.txt
